# Qwen3-VL

./: README.md  pyproject.toml  web_demo_mm.py
cookbooks/: 3d_grounding.ipynb  german_document_ocr.ipynb  long_document_understanding.ipynb  mmcode.ipynb  mobile_agent.ipynb  omni_recognition.ipynb  spatial_understanding.ipynb  think_with_images.ipynb  video_understanding.ipynb
cookbooks/utils/: agent_function_call.py
cookbooks/utils/multimodal_coding/: take_screenshot.py  test_mmcode.py
evaluation/MathVision/: dataset_utils.py  eval_utils.py  run_mathv.py
evaluation/ODinW-13/: dataset_utils.py  eval_utils.py  run_odinw.py
evaluation/RealWorldQA/: dataset_utils.py  eval_utils.py  run_realworldqa.py
evaluation/VideoMME/: dataset_utils.py  eval_utils.py  run_videomme.py
evaluation/mmmu/: common_utils.py  dataset_utils.py  eval_utils.py  run_mmmu.py
libs/qwen_vl_finetune/: pyproject.toml
libs/qwen_vl_finetune/src/qwen_vl_finetune/data/: data_processor.py  rope2d.py
libs/qwen_vl_finetune/src/qwen_vl_finetune/train/: argument.py  train_qwen.py  trainer.py
libs/qwen_vl_finetune/tools/: check_image.py  pack_data.py
libs/qwen_vl_utils/: pyproject.toml
libs/qwen_vl_utils/src/qwen_vl_utils/: vision_process.py
src/qwen_vl_finetune/qwen_vl_finetune/data/: data_processor.py
src/qwen_vl_finetune/qwen_vl_finetune/train/: train_qwen.py
src/qwen_vl_finetune/tools/: pack_data.py  process_bbox.ipynb
