[project]
name = "qwen-vl-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "deepspeed==0.17.1",
    "peft==0.17.1",
    "torch==2.6.0",
    "torchcodec==0.2",
    "torchvision==0.21.0",
    "transformers[torch,torch-vision]>=4.57.6",
    "triton==3.2.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "libs/qwen_vl_utils",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.1.5",
    "ty>=0.0.10",
]
